# obpgenerator

./: README.md  example_3D.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Import description.docx
examples/: example_3D.py  fork.stl  layer_nine_cubes.svg.bak  snake_cube.py  test.py  timing.py  two_cubes.stl  visualisation.py
obpgenerator/: Contour.py  Layer.py  Part.py  Shape.py  __init__.py  __main__.py  file_import.py  generate_obp.py  layer_sorting.py  offset_paths.py  shape_melting.py  slicer.py  timemeasure.py
obpgenerator/melt_strategies/: __init__.py
obpgenerator/support_functions/: __init__.py  file_import.py  generate_coordinates.py  slicer.py
obpgenerator/visualization/: __init__.py  obp_to_matplotlib.py  test.py  visualization.py
obpviewer/: OBPCompiler.py  layer0.obp  testtest.obpj  testtest.obpj.bak
scripts/: Layer.py  Shape.py  file_import.py  layer_sorting.py  line_melting.py  main.py  manufacturing_settings.py  point_melting.py  shape_melting.py  slicer.py  slicer_3mf.py
scripts/melt_strategies/: line_melting.py  point_melting.py
src/: slicer_final.py
src/testfiles/: cube.stl  cube_10_10_10.3mf  test_fork.stl  test_pipe.stl
