[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obpgenerator"
version = "0.0.1"
authors = [
  { name="Anton Wiberg", email="wiberg.anton@gmail.com" },
]
description = "Package for generation of open beam path (obp) files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wiberganton/obpgenerator"
"Bug Tracker" = "https://github.com/wiberganton/obpgenerator/issues"